Product: fixed issue with collapsing box
fixed issue when there is no desc for product whole product box
collapses

--- a/src/components/product/product.less
+++ b/src/components/product/product.less
@@ -5,6 +5,7 @@
     .striped-background();
     margin: 5px;
     transition: box-shadow .2s linear;
+    width: 100%;
 
     .card-image {
       > .card-rating {
